<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.pwr.tirt.plangen.activities.DayViewActivity">

    <item android:id="@+id/campus_map"
        android:icon="@drawable/ic_action_map"
        app:showAsAction="ifRoom"
        android:title="@string/campus_map" />

    <item android:id="@+id/action_add_event"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/add_event_activity" />

    <item android:id="@+id/action_edit_event"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/title_activity_edit_event" />

    <item android:id="@+id/action_week_view"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:title="@string/week_view_activity" />

    <item android:id="@+id/action_settings"
        android:orderInCategory="400"
        app:showAsAction="never"
        android:title="@string/action_settings" />


</menu>
