<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.pwr.tirt.plangen.activities.DayViewActivity"
    android:orientation="vertical"
    android:background="@color/backgroud_color_layout">

    <TextView
        android:id="@+id/textViewWeekdayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/linearLayoutBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:layout_weight="0.1"/>

    <SeekBar
        android:id="@+id/seekBarDayProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.85">

            <TextView
                android:id="@+id/textViewEventTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15">

            <Button
                android:id="@+id/buttonMonday"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                style="?android:attr/buttonStyleSmall"
                android:background="@drawable/weekday_button"
                android:text="@string/monday_short"
                android:onClick="onClickMonday"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>

            <Button
                android:id="@+id/buttonTuesday"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                style="?android:attr/buttonStyleSmall"
                android:background="@drawable/weekday_button"
                android:text="@string/tuesday_short"
                android:onClick="onClickTuesday"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>

            <Button
                android:id="@+id/buttonWednesday"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                style="?android:attr/buttonStyleSmall"
                android:background="@drawable/weekday_button"
                android:text="@string/wednesday_short"
                android:textStyle="bold"
                android:onClick="onClickWednesday"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"/>

            <Button
                android:id="@+id/buttonThursday"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:background="@drawable/weekday_button"
                style="?android:attr/buttonStyleSmall"
                android:text="@string/thursday_short"
                android:onClick="onClickThursday"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>

            <Button
                android:id="@+id/buttonFriday"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:background="@drawable/weekday_button"
                style="?android:attr/buttonStyleSmall"
                android:text="@string/friday_short"
                android:onClick="onClickFriday"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_marginBottom="5dp" />

            <Button
                android:id="@+id/buttonSaturday"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                style="?android:attr/buttonStyleSmall"
                android:background="@drawable/weekday_button"
                android:text="@string/saturday_short"
                android:onClick="onClickSaturday"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>

            <Button
                android:id="@+id/buttonSunday"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:background="@drawable/weekday_button"
                style="?android:attr/buttonStyleSmall"
                android:text="@string/sunday_short"
                android:onClick="onClickSunday"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
