<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.pwr.tirt.plangen.activities.DetailsActivity">

    <TextView
        android:id="@+id/textViewDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/details_title" />

    <TextView
        android:id="@+id/textViewDetailsTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewDetailsTitle"
        android:text="@string/details_time" />

    <TextView
        android:id="@+id/textViewDetailsLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewDetailsTime"
        android:text="@string/details_location" />

    <TextView
        android:id="@+id/textViewDetailsTitleValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textViewDetailsTitle"
        android:layout_toEndOf="@+id/textViewDetailsTitle"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/textViewDetailsTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDetailsTitleValue"
        android:layout_alignLeft="@+id/textViewDetailsTitleValue"
        android:layout_alignStart="@+id/textViewDetailsTitleValue" />

    <TextView
        android:id="@+id/textViewDetailsLocationValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDetailsTimeValue"
        android:layout_alignLeft="@+id/textViewDetailsTimeValue"
        android:layout_alignStart="@+id/textViewDetailsTimeValue" />

</RelativeLayout>
